tests/fail/MultiPublicError.java
package fail;

public class MultiPublicError {
}

public class SecondPublic {
}
